// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component tests Badge all props 1`] = `
<View
  appearance="outline"
  shape="rounded"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderColor": "#0f6cbd",
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    style={
      {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#0f6cbd",
        "fontFamily": "System",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "marginEnd": 2,
      }
    }
  >
    Badge
  </Text>
</View>
`;

exports[`Badge component tests Badge tokens 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "yellow",
      "borderColor": "#f09",
      "borderRadius": 9999,
      "borderWidth": 4,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 20,
      "minWidth": 20,
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "fontFamily": "System",
        "fontSize": 12,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Badge Tokens
  </Text>
</View>
`;

exports[`Badge component tests Empty Badge 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 20,
      "minWidth": 20,
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": undefined,
    }
  }
/>
`;

exports[`Badge component tests Filled badge with shadow 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "borderRadius": 9999,
      "bottom": 0,
      "justifyContent": "center",
      "minHeight": 20,
      "minWidth": 20,
      "position": "relative",
      "right": 0,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 4,
    }
  }
>
  <View
    appearance="filled"
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 9999,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 20,
        "minWidth": 20,
        "paddingHorizontal": 4,
        "position": "relative",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 32,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 32,
      }
    }
  >
    <Text
      accessible={false}
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "margin": 0,
        }
      }
    >
      Badge with shadow
    </Text>
  </View>
</View>
`;

exports[`CounterBadge component tests CounterBadge all props 1`] = `
<View
  appearance="ghost"
  shape="rounded"
  size="large"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    style={
      {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#323130",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    30
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge shows 99+ 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#323130",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    99+
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge shows 1000+ 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#323130",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    1000+
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge shows zero 1`] = `
<View
  showZero={true}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#323130",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    0
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge tokens 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "yellow",
      "borderColor": "#f09",
      "borderRadius": 9999,
      "borderWidth": 4,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#323130",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    70
  </Text>
</View>
`;

exports[`CounterBadge component tests Empty Badge 1`] = `null`;

exports[`PresenceBadge component tests PresenceBadge props 1`] = `
<View
  accessible={true}
  iconPosition="before"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "borderRadius": 9999,
      "borderWidth": 2,
      "bottom": 0,
      "flexDirection": "row",
      "height": 20,
      "justifyContent": "center",
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": 20,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={16}
    bbWidth={16}
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "aspectRatio": 1,
          "color": "#13a10e",
          "height": 16,
          "width": 16,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={16}
    vbWidth={16}
  >
    <RNSVGGroup
      color="#13a10e"
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M11.7071 6.70711C12.0976 6.31658 12.0976 5.68342 11.7071 5.29289C11.3166 4.90237 10.6834 4.90237 10.2929 5.29289L7 8.58579L5.70711 7.29289C5.31658 6.90237 4.68342 6.90237 4.29289 7.29289C3.90237 7.68342 3.90237 8.31658 4.29289 8.70711L6.29289 10.7071C6.68342 11.0976 7.31658 11.0976 7.70711 10.7071L11.7071 6.70711ZM0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
